--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,8 +19,11 @@
   },
   "homepage": "https://github.com/needhieshsingxh/Backend-Project#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.6",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "mongoose": "^9.1.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.11",
